Updated to version 5.0, refer to the changelog